openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-svc
  labels:
    app: react-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: react-app
